--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ workflow/notebooks/.ipynb_checkpoints/**
 **/.Rproj.user/**
 **/.RData
 **/Rplots.pdf
+# pixi environments
+.pixi/*
+!.pixi/config.toml
