Add pattern to ignore Jupyter notebook checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ logs/**
 .snakemake/**
 .test/results/*
 workflow/notebooks/.ipynb_checkpoints/**
+**/.ipynb_checkpoints/**
 **/.Rhistory
 **/*.Rproj
 **/.Rproj.user/**
