first working version

--- a/pixi.toml
+++ b/pixi.toml
@@ -10,7 +10,14 @@ version = "0.1.0"
 duckdb = ">=1.4.3,<2"
 snakemake = ">=9.14.6,<10"
 jupyterlab = ">=4.5.2,<5"
-bioconductor-karyoploter = ">=1.32.0,<2"
 ruff = ">=0.14.11,<0.15"
 pytest = ">=9.0.2,<10"
 dvc = ">=3.66.1,<4"
+
+r-base = ">=4.3"
+rpy2 = ">=3.5"
+bioconductor-karyoploter = ">=1.30"
+bioconductor-genomeinfodb = ">=1.38"
+bioconductor-genomeinfodbdata = ">=1.2.13,<2"
+bioconductor-regioner = "*"
+bioconductor-zlibbioc = "*"
