--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,10 @@
 data_dir: "data"
 results_dir: "results"
 samples_dir: "samples"
+
+exclude:
+    ["1_29","1_30","1_31", 
+    "2_7","2_8","2_9",
+    "3_26","3_27","3_28","3_29",
+    "4_6","4_7","4_8","4_9","4_10",
+    "5_22","5_23","5_24","5_25","5_26"]
