more plot changes

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,3 +8,10 @@ exclude:
     "3_26","3_27","3_28","3_29",
     "4_6","4_7","4_8","4_9","4_10",
     "5_22","5_23","5_24","5_25","5_26"]
+
+centromeres:
+    "1": [29, 31]
+    "2": [7, 9]
+    "3": [26, 29]
+    "4": [6, 10]
+    "5": [22, 26]
