significant value calculation and grpahing

--- a/pixi.toml
+++ b/pixi.toml
@@ -21,3 +21,4 @@ bioconductor-genomeinfodb = ">=1.38"
 bioconductor-genomeinfodbdata = ">=1.2.13,<2"
 bioconductor-regioner = "*"
 bioconductor-zlibbioc = "*"
+scipy = ">=1.17.0,<2"
